Add in "Most" choice for advanced x264 analysis option.
--HG--
branch : beta

--- a/VidCoder/LocalResources/EncodingRes.resx
+++ b/VidCoder/LocalResources/EncodingRes.resx
@@ -844,4 +844,7 @@ Overrides all other settings.</value>
   <data name="VideoEncoder_x264" xml:space="preserve">
     <value />
   </data>
+  <data name="Analysis_Most" xml:space="preserve">
+    <value>Most</value>
+  </data>
 </root>
