Follow up to hiding x264 controls: resource extraction.
--HG--
branch : beta

--- a/VidCoder/LocalResources/EncodingRes.resx
+++ b/VidCoder/LocalResources/EncodingRes.resx
@@ -847,4 +847,7 @@ Overrides all other settings.</value>
   <data name="Analysis_Most" xml:space="preserve">
     <value>Most</value>
   </data>
+  <data name="AdvancedQuery" xml:space="preserve">
+    <value>Advanced Query</value>
+  </data>
 </root>
