--- a/VidCoder/LocalResources/PreviewRes.hu.resx
+++ b/VidCoder/LocalResources/PreviewRes.hu.resx
@@ -117,116 +117,67 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AboutLicense" xml:space="preserve">
-    <value>This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 2 of the License, or (at your option) any later version.
-
-This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
-
-A full copy of the GNU General Public License has been included along with this program.</value>
+  <data name="PlaySourceButton" xml:space="preserve">
+    <value>Forrás lejátszása</value>
   </data>
-  <data name="BurnedSubtitleToolTip" xml:space="preserve">
-    <value>Burn the subtitles onto the picture. With burned subtitles, you cannot disable them during playback.</value>
+  <data name="EncodePreviewClipButton" xml:space="preserve">
+    <value>Előnézeti klip kódolása</value>
   </data>
-  <data name="DefaultSubtitleToolTip" xml:space="preserve">
-    <value>Mark this subtitle track as the default. This will show up during playback until another track is picked.</value>
+  <data name="EncodePreviewClipToolTip" xml:space="preserve">
+    <value>Kódol és lejátszik egy rövid előnézetet a kiválasztott videóból. A jelenlegi kódolási beállításokat használja.</value>
   </data>
-  <data name="ForcedSubtitleToolTip" xml:space="preserve">
-    <value>Only display forced subtitles from the given track. Usually this means small bits of foreign dialogue.</value>
+  <data name="GeneratingPreview" xml:space="preserve">
+    <value>Előnézet generálása...</value>
   </data>
-  <data name="OffsetSubtitleToolTip" xml:space="preserve">
-    <value>The amount of time to push forward or delay the appearance of the given subtitles.</value>
+  <data name="PlaySourceDisabledBluRayToolTip" xml:space="preserve">
+    <value>A Blu-ray forrás előnézete még nem támogatott.</value>
   </data>
-  <data name="QueueColumnNameChapters" xml:space="preserve">
-    <value>Chapters</value>
+  <data name="PlaySourceDisabledNoPlayerToolTip" xml:space="preserve">
+    <value>Támogatott DVD lejátszó nem található. Telepítsd a VLC-t vagy MPC-HC-t a lehetőség használatához.</value>
   </data>
-  <data name="QueueColumnNameDestination" xml:space="preserve">
-    <value>Destination</value>
+  <data name="PlaySourceToolTip" xml:space="preserve">
+    <value>Lejátssza a forrásvideót.</value>
   </data>
-  <data name="QueueColumnNameSource" xml:space="preserve">
-    <value>Source</value>
+  <data name="PreviewClipGenerationFailedMessage" xml:space="preserve">
+    <value>Előnézeti klipgenerálás nem sikerült. További részletek a Napló ablakban.</value>
   </data>
-  <data name="QueueColumnNameTitle" xml:space="preserve">
-    <value>Title</value>
+  <data name="PreviewClipGenerationFailedTitle" xml:space="preserve">
+    <value>Előnézeti klipgenerálás nem sikerült.</value>
   </data>
-  <data name="QueueColumnNameAudioQuality" xml:space="preserve">
-    <value>Audio Quality</value>
+  <data name="PreviewWindowTitleSimple" xml:space="preserve">
+    <value>Előnézet: {0}x{1}</value>
   </data>
-  <data name="QueueColumnNameAudioEncoder" xml:space="preserve">
-    <value>Audio Encoder</value>
+  <data name="PreviewWindowTitleComplex" xml:space="preserve">
+    <value>Előnézet: Képernyő {0}x{1} - Tároló {2}x{3}</value>
   </data>
-  <data name="QueueColumnNameVideoEncoder" xml:space="preserve">
-    <value>Video Encoder</value>
+  <data name="NoVideoSourceTitle" xml:space="preserve">
+    <value>Előnézet: Nincs videóforrás</value>
   </data>
-  <data name="QueueColumnNameVideoQuality" xml:space="preserve">
-    <value>Video Quality</value>
+  <data name="Seconds" xml:space="preserve">
+    <value>másodperc</value>
   </data>
-  <data name="QueueEtaToolTip" xml:space="preserve">
-    <value>Estimated time remaining for all jobs in the queue to complete.</value>
+  <data name="PreviewDisplay_Corners" xml:space="preserve">
+    <value>Sarkok</value>
   </data>
-  <data name="QueueColumnNameDuration" xml:space="preserve">
-    <value>Duration</value>
+  <data name="PreviewDisplay_FitToWindow" xml:space="preserve">
+    <value>Igazítás az ablakhoz</value>
   </data>
-  <data name="ForeignAudioSearchToolTip" xml:space="preserve">
-    <value>Searches for subtitle track that is likely to contain bits of foreign dialogue. Good for movies that are mainly in your native language.</value>
+  <data name="PreviewDisplay_OneToOne" xml:space="preserve">
+    <value>1:1</value>
   </data>
-  <data name="Default" xml:space="preserve">
-    <value>Default</value>
+  <data name="ViewLabel" xml:space="preserve">
+    <value>Nézet:</value>
   </data>
-  <data name="Custom" xml:space="preserve">
-    <value>Custom</value>
+  <data name="TopMargin" xml:space="preserve">
+    <value>Felső margó</value>
   </data>
-  <data name="Browse" xml:space="preserve">
-    <value>Browse...</value>
+  <data name="LeftMargin" xml:space="preserve">
+    <value>Bal margó</value>
   </data>
-  <data name="Delete" xml:space="preserve">
-    <value>Delete</value>
+  <data name="RightMargin" xml:space="preserve">
+    <value>Jobb margó</value>
   </data>
-  <data name="PreviewLabel" xml:space="preserve">
-    <value>Preview</value>
-  </data>
-  <data name="Automatic" xml:space="preserve">
-    <value>Automatic</value>
-  </data>
-  <data name="Off" xml:space="preserve">
-    <value>Off</value>
-  </data>
-  <data name="All" xml:space="preserve">
-    <value>All</value>
-  </data>
-  <data name="StreamChoice" xml:space="preserve">
-    <value>Stream {0}</value>
-  </data>
-  <data name="Ok" xml:space="preserve">
-    <value>OK</value>
-  </data>
-  <data name="Cancel" xml:space="preserve">
-    <value>Cancel</value>
-  </data>
-  <data name="Disabled" xml:space="preserve">
-    <value>Disabled</value>
-  </data>
-  <data name="Remove" xml:space="preserve">
-    <value>Remove</value>
-  </data>
-  <data name="Copy">
-    <value xml:space="preserve">Copy</value>
-  </data>
-  <data name="Yes">
-    <value xml:space="preserve">Yes</value>
-  </data>
-  <data name="No">
-    <value xml:space="preserve">No</value>
-  </data>
-  <data name="CouldNotAccessDirectoriesError">
-    <value xml:space="preserve">Could not access the following directories:</value>
-  </data>
-  <data name="None">
-    <value xml:space="preserve">None</value>
-  </data>
-  <data name="Succeeded" xml:space="preserve">
-    <value>Succeeded</value>
-  </data>
-  <data name="Failed" xml:space="preserve">
-    <value>Failed</value>
+  <data name="BottomMargin" xml:space="preserve">
+    <value>Alsó margó</value>
   </data>
 </root>
