Fixed memory leak from scan instances. Added a menu option and button to close the current video source and get the initial "pick source" UI back.
--HG--
branch : beta

--- a/VidCoder/Resources/MainRes.resx
+++ b/VidCoder/Resources/MainRes.resx
@@ -525,4 +525,10 @@
   <data name="OpeningFolderStatus" xml:space="preserve">
     <value>Opening folder...</value>
   </data>
+	<data name="CloseVideoSourceToolTip" xml:space="preserve">
+    <value>Close video source</value>
+  </data>
+	<data name="CloseVideoSourceMenuItem" xml:space="preserve">
+    <value>Close Video Source</value>
+  </data>
 </root>
